--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "run": "node App.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-
+    "dotenv": "11.0.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "4.17.2",
     "nvm": "0.0.4"
   }
