--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dotenv": "11.0.0"
   },
   "dependencies": {
+    "firebase": "^9.6.4",
     "cors": "^2.8.5",
-    "express": "4.17.2",
-    "nvm": "0.0.4"
+    "express": "4.17.2"
   }
 }
