--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "firebase": "^9.6.4",
     "cors": "^2.8.5",
-    "express": "4.17.2"
+    "express": "4.17.2",
+    "uuid": "^8.3.2"
   }
 }
