--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "11.0.0"
   },
   "dependencies": {
     "firebase": "^9.6.4",
     "cors": "^2.8.5",
     "express": "4.17.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "dotenv": "11.0.0"
   }
 }
